@@ -1,3 +1,7 @@
+2011-04-19  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* fiber-mon.c: Ruby1.9.2のrb_data_type_t対応
+
 2011-04-10  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* fiber-mon.gemspec: 拡張ライブラリ用に修正
